<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red2"
    tools:context=".MainActivity">



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagebutton1"
            android:src="@drawable/dota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <TextView
            tools:text="@string/question_text1"
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:gravity="center"

            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="87dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/buttonYes"
                android:layout_width="134dp"
                android:layout_height="58dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button1"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick = "onCreate"/>

            <Button
                android:id="@+id/buttonNo"
                android:layout_width="134dp"
                android:layout_height="58dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button1"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick = "onCreate"/>
        </LinearLayout>




    <LinearLayout
        android:layout_width="175dp"
        android:layout_height="87dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/buttonPrev"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:background="@drawable/button1"
            android:text="@string/prev"
            android:textSize="32dp"
            android:onClick="incorrect"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button1"
            android:textColor="@color/black"
            android:text="@string/next"
            android:textSize="32dp"
            android:onClick="onCreate"
            android:textStyle="bold"
            />

    </LinearLayout>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>

