<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".Registration">
    <ImageView
        android:id="@+id/launch_logo"
        android:layout_width="148dp"
        android:layout_height="138dp"
        android:src="@drawable/dota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="253dp"
        android:layout_height="69dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <EditText
        android:id="@+id/email"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:background="@drawable/button1"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <EditText
        android:id="@+id/password"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:background="@drawable/button1"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/button2"
        android:gravity="center"
        android:onClick="login"

        android:text="@string/enter"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="336dp"
        android:layout_height="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/button2"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766" />

</androidx.constraintlayout.widget.ConstraintLayout>